<resources>
    <string name="app_name">TwoActivity</string>
    <string name="aboutMe">Born on October 31, 1961, in New Zeland, Peter Jackson started his
        prolific career as a child,creating short films with a 8-mm movie camera.
        Without any formal training, Jackson has directed a number
        of successful films ranging across all genres.</string>
    <string name="hello_i_m_activity_one">Hello, I\'m activity One</string>
    <string name="toast_message">You return Back to first Activity</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_city_where_you_live">Enter City Where You Live</string>
    <string name="activity_two">Activity Two</string>
    <string name="android_image">Android Image</string>
    <string name="image_button_arrow">Image Button Arrow</string>
    <string name="resultFromAboutMe">Hello, %s from %s</string>
    <string name="resultAboutMeNameCity">Hello, %s , from %s</string>

</resources>